             -e Kk to colour sets of edges connected by edges,
             -vef M to convert colour indexes to values using map
             -I to convert colour values to indexes
           unipoly,johnson: programs removed, models are in resources
              see 'off_util -H uniform' and 'off_util -H johnson'
           polygon: snub-antiprisms added, antiprism alignment changed
           bravais: option -R also fills and overlays with cubes
           iso_delta: new option -C for colouring
           pol_recip: default centre is centroid, new option -a
             appends dual to original geometry
           antiview,off2vrml,off2pov: new option -s to display
             symmetry elements
           off_util: new option -H for general help, new option -u
             to unfold a polyhedron net, new option -x V deletes
             free vertices
           minmax: new ellipsoid and superellipsoid surfaces, default
             algorithm is v
           Resources: new colour map files and generatable maps,
             uniform and Johnson model files removed and are now
             internal unit-edged and coloured, new uniform
             compounds (by Roger Kaufman), duals (appending _d),
             geodesic spheres
           All: --help and --version options. New shift, step,
             and wrap modifiers for reindexing colour maps
           
         Fixes
           lat_grid: origin is the default centre for -c s

Version 0.19.1
02-12-08 Adrian Rossiter <adrian@antiprism.com>
         Fixes
           build: will build with GCC 4.3
           off_color: -e p outputs colour index numbers

Version 0.19
28-11-08 Adrian Rossiter <adrian@antiprism.com>
         New Programs
           bravais: generates Bravais lattices, and their reciprocal
             lattices and Dirchlet regions (by Roger Kaufman)
           waterman: generates Waterman polyhedra (by Roger Kaufman)
         Changes
           all: new colour name 'invisible' for hiding elements